[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Setups/NoNetworkSetup.gd" type="Script" id=1]
[ext_resource path="res://scenes/MainMenu/HeaderSection.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/BlackOpsOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/Setups/BackToMenu.gd" type="Script" id=4]
[ext_resource path="res://scenes/Setups/HostClientSection.gd" type="Script" id=5]
[ext_resource path="res://scenes/Widgets/LeftRightWidget.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 3 )

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 540.0
margin_bottom = 960.0
color = Color( 0, 0, 0, 1 )

[node name="HeaderSection" parent="." instance=ExtResource( 2 )]

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 10.0
margin_top = 102.0
margin_right = 530.0
margin_bottom = 300.0
color = Color( 0.576471, 0.513726, 0.231373, 1 )

[node name="Label" type="Label" parent="ColorRect3"]
margin_right = 520.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Let's Setup Your Game"
align = 1

[node name="Label2" type="Label" parent="ColorRect3"]
margin_top = 49.0
margin_right = 520.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 2 )
text = "For a networked game, decide if 
you will be the host or a client?
The host sets up the game specifics.
Clients simply join the lobby."
align = 1

[node name="GoToNext" type="Button" parent="."]
margin_left = 322.0
margin_top = 896.0
margin_right = 537.0
margin_bottom = 956.0
custom_fonts/font = SubResource( 3 )
text = "Go To Lobby >"

[node name="BackToMenu" type="Button" parent="."]
margin_left = 3.0
margin_top = 900.0
margin_right = 216.0
margin_bottom = 956.0
custom_fonts/font = SubResource( 4 )
text = "< Back To Menu"
script = ExtResource( 4 )

[node name="HostClientSection" type="ColorRect" parent="."]
margin_left = 8.0
margin_top = 314.0
margin_right = 530.0
margin_bottom = 400.0
color = Color( 0.576471, 0.513726, 0.231373, 1 )
script = ExtResource( 5 )

[node name="HostClientWidget" parent="HostClientSection" instance=ExtResource( 6 )]
margin_left = 92.0
margin_top = 36.0
margin_right = 408.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="HostClientSection"]
margin_top = -3.0
margin_right = 520.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 5 )
text = "Client or Host?"
align = 1
[connection signal="pressed" from="GoToNext" to="HostClientSection" method="_on_GoToNext_pressed" flags=3]
[connection signal="pressed" from="BackToMenu" to="BackToMenu" method="_on_BackToMenu_pressed" flags=7]
[connection signal="LRWidChanged" from="HostClientSection/HostClientWidget" to="HostClientSection" method="_on_HostClientWidget_LRWidChanged" flags=3]
